results/e9835b57673cbef5806afe640d45abc4/err_code.txt
  File "./pyfile.py", line 21
    wrapper_data = {wrapper_data}theta = {theta}variables = {variables}sampler_type = {sampler_type}
                                     ^
SyntaxError: invalid syntax
